src/test/resources/semantic/custom/reject/assignmentWithoutDeclArray.ul
void main() {
}

void foo() {
    int foo;
    bar[5] = 50;
}
